<resources>
    <string name="app_name">RecyclePro</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recycle">إعادة التدوير:</string>
    <string name="recycle1">التدوير هو عملية جمع ومعالجة المواد القابلة لإعادة الاستخدام من أجل تحويلها إلى منتجات جديدة، وذلك بهدف تقليل النفايات وحماية البيئة. تعتبر عملية إعادة التدوير جزءًا هامًا من جهود الاستدامة البيئية.:</string>
    <string name="recycle2">الخطوات الرئيسية لعملية إعادة التدوير تتضمن</string>
    <string name="recycle3">
1.جمع المواد القابلة للتدوير: يتم جمع المواد مثل الورق، البلاستيك، الزجاج، والمعادن من المنازل والمؤسسات باستخدام حاويات خاصة لهذا الغرض.
:</string>
    <string name="recycle4">2.الفرز: بعد جمع المواد، يتم فرزها وفقًا لأنواعها. يساعد هذا في تسهيل عملية إعادة تصنيعها.:</string>
    <string name="recycle5">3.ايجاد طرق لإعادة استخدام المنتج: إيجاد أفكار وطرق لإعادة استخدام او تدوير المنتج لعدم رميه.</string>
    <string name="recycle6">4.ايجاد مركز لإعادة التدوير بحال لم تجد طريقة لإعادة استخدام المنتج.</string>
    <string name="effect">إعادة استخدام المنتجات بدلاً من رميها تؤثر إيجابًا على البيئة بعدة طرق:</string>
    <string name="effect1">1. تقليل النفايات: إعادة استخدام المنتجات تقلل من حجم النفايات التي تنتهي في المكبات النفايات، مما يحد من التأثير السلبي على البيئة ويسهم في تحسين جودة الهواء والتربة.</string>
    <string name="effect2">2.توفير الموارد: عندما يتم إعادة استخدام المنتجات، يقلل ذلك من الحاجة إلى إنتاج منتجات جديدة، مما يوفر الموارد الطبيعية مثل الخشب، والمعادن، والنفط.</string>
    <string name="effect3">3.تقليل استهلاك الطاقة: عملية إعادة استخدام تتطلب غالبًا أقل طاقة من عملية تصنيع منتج جديد، حيث لا يكون هناك حاجة إلى استخدام موارد كبيرة وإجراءات تصنيع معقدة.</string>
    <string name="effect4">4.تقليل انبعاثات الكربون: بافتراض أن عملية إعادة الاستخدام تتطلب أقل كمية طاقة من تصنيع منتج جديد، يمكن تقليل انبعاثات الكربون المرتبطة بعمليات الإنتاج.</string>
    <string name="effect5">5. تحفيز الاقتصاد الدائري: إعادة استخدام المنتجات تعزز مفهوم الاقتصاد الدائري، حيث يتم تحويل الموارد المستعملة إلى منتجات جديدة بدلاً من التخلص منها، مما يدعم التنمية المستدامة.</string>
    <string name="effect6">يساهم إعادة استخدام المنتجات في تحقيق التوازن بين الاستهلاك والمحافظة على الموارد البيئية، مما يعزز الاستدامة ويحد من الأثر البيئي السلبي لأنشطة الإنتاج والاستهلاك... بالنسبة للمواد التي يمكن أن ترتمى في أمور أخرى، يُشدد على أهمية تحقيق التوعية بشأن القضايا البيئية وتعزيز ثقافة التقليل من الاستهلاك وإعادة التدوير. يُفضل تجنب التخلص العشوائي للمواد غير القابلة للتحلل والبحث عن وسائل بديلة صديقة للبيئة. </string>
    <string name="eco">إعادة استخدام المنتجات تعتبر وسيلة فعّالة لتحقيق التوازن البيئي وتبني نمط حياة صديق للبيئة. بعض الطرق للإعادة استخدام :</string>
    <string name="eco1">تحويل العبوات والحاويات: استخدامها لتخزين المواد الأخرى.</string>
    <string name="eco2">إعادة التدوير الإبداعي: تحويل المنتجات إلى فنون أو حرف يدوية</string>
    <string name="eco3">تحويل الملابس والأقمشة: تحويل الملابس القديمة إلى قطع جديدة.</string>
    <string name="eco4">إعادة الاستخدام في المنزل: استخدام المنتجات في وظائف جديدة</string>
    <string name="eco5">تبادل الأشياء: مشاركة الأشياء مع الأصدقاء أو المجتمع</string>
    <string name="eco6">تجميع وإعادة توزيع الألعاب والكتب: توزيع الألعاب والكتب المستعملة</string>
    <string name="eco7">تجديد الأثاث: تحديث الأثاث القديم ليتناسب مع الديكور الحديث</string>
    <string name="eco8">إعادة تعبئة الحاويات والزجاجات: إعادة استخدام حاويات الطعام والزجاجات</string>
</resources>