<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.EcoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:id="@+id/textView"
                android:textSize="24sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="15dp"
                android:text="@string/eco"/>

            <TextView
                android:id="@+id/textView1"
                android:background="@drawable/custom_edittext1"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/eco1" />

            <TextView
                android:id="@+id/textView2"
                android:background="@drawable/custom_edittext1"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/eco2"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textView3"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/custom_edittext1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/eco3" />

            <TextView
                android:id="@+id/textView4"
                android:background="@drawable/custom_edittext1"
                android:textSize="20dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/eco4" />

            <TextView
                android:id="@+id/textView5"
                android:textSize="25dp"
                android:padding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:background="@drawable/custom_edittext1"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:text="@string/eco5" />

            <TextView
                android:id="@+id/textView6"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:background="@drawable/custom_edittext1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="8dp"
                android:textSize="20dp"
                android:text="@string/eco6" />

            <TextView
                android:id="@+id/textView7"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:background="@drawable/custom_edittext1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="8dp"
                android:textSize="20dp"
                android:text="@string/eco7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:background="@drawable/custom_edittext1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="8dp"
                android:textSize="20dp"
                android:padding="10dp"
                android:text="@string/eco8" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>